--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Modernize Free</title>
-  <link rel="shortcut icon" type="image/png" href="../assets/images/logos/favicon.png" />
-  <link rel="stylesheet" href="../assets/css/styles.min.css" />
+  <link rel="shortcut icon" type="image/png" href="images/logos/favicon.png" />
+  <link rel="stylesheet" href="css/styles.min.css" />
 </head>
 
 <body>
@@ -20,8 +20,8 @@
           <div class="col-md-8 col-lg-6 col-xxl-3">
             <div class="card mb-0">
               <div class="card-body">
-                <a href="./index.html" class="text-nowrap logo-img text-center d-block py-3 w-100">
-                  <img src="../assets/images/logos/dark_logo.png" width="100%" alt="">
+                <a href="index.html" class="text-nowrap logo-img text-center d-block py-3 w-100">
+                  <img src="images/logos/dark_logo.png" width="100%" alt="">
                 </a>
                 <p class="text-center">Your Social Campaigns</p>
                 <form>
